--- a/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.csproj
+++ b/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.csproj
@@ -10,6 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.840541-pre1" />
   </ItemGroup>
 </Project>
