--- a/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.iOS/LDNotificationBadge.iOS.csproj
+++ b/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.iOS/LDNotificationBadge.iOS.csproj
@@ -148,7 +148,13 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Plugin.Notifications">
+      <Version>5.0.0-beta3</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Badge">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.840541-pre1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
