--- a/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.csproj
+++ b/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Plugin.Notifications" Version="5.0.0-beta3" />
+    <PackageReference Include="Xam.Plugin.Badge" Version="1.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.840541-pre1" />
   </ItemGroup>
 </Project>
